default/objects/PicklistMapping__mdt/PicklistMapping__mdt.object-meta.xml
<CustomObject>
    <label>PicklistMapping</label>
    <pluralLabel>PicklistMappings</pluralLabel>
</CustomObject>