default/objects/PicklistMapping__mdt/fields/ESValue__c.field-meta.xml
<CustomField>
    <fullName>ESValue__c</fullName>
    <label>ES Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>