default/objects/PicklistMapping__mdt/fields/SFValue__c.field-meta.xml
<CustomField>
    <fullName>SFValue__c</fullName>
    <label>SF Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>